Fix toc
Fix the toc CSS so that the scrollbar appears.

--- a/src/main/css/toc.css
+++ b/src/main/css/toc.css
@@ -66,6 +66,8 @@ body.toc-left #doc {
 #toc.fixed-toc {
   position: fixed;
   top: 0;
+  overflow-x: scroll;
+  height: 100%
 }
 
 #toc li.active > a {
